fix(ffe-lists): allow for long words in description term
A long time ago we added overflow: hidden to description term to keep it
from breaking the layout. However, this will harshly cut off words that
are too long to fit in the dt. By adding overflow-wrap: break-word we
allow soft wrapping of words, without breaking the layout.

--- a/packages/ffe-lists/less/description-list.less
+++ b/packages/ffe-lists/less/description-list.less
@@ -68,6 +68,7 @@
     .ffe-description-list__term {
         flex: 0 0 35%;
         overflow: hidden;
+        overflow-wrap: break-word;
     }
 
     .ffe-description-list__description {
